compiler/test_files/typing/good/testfile-duplicate-func-name.psc
class C{
    i32 f(){
        return false;
    }
}

class C2{
    bool f(){
        return false;
    }
}

new C().f();
new C2().f();