compiler/test_files/typing/bad/testfile-call-1.psc
i32 f(i32 x) {}
i32 main() { f(); }
